<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/reviewSignatureFragment"
    android:tag="@string/reviewSignatureTag"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewSignatureFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please approve or decline signature"
        android:id="@+id/textView"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/imageview_signature"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:padding="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/operator_pin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Operator PIN"
        android:inputType="numberPassword"
        android:digits="0123456789"
        android:maxLength="4"
        android:ems="10"
        android:layout_weight="1"
        android:selectAllOnFocus="false"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/imageview_signature"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.7"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/operator_pin_text"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.3">


        <Button
            android:id="@+id/decline_signature_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/decline" />

        <Button
            android:id="@+id/approve_signature_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/approve" />

        <Button
            android:id="@+id/terminate_signature_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/terminate"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>