<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.creditcall.chipdnamobiledemo.ChipDnaMobileDemoActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select PIN Pad"
        android:id="@+id/select_pinpad"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connect To PIN Pad"
        android:id="@+id/connect_to_pinpad"
        android:layout_below="@+id/select_pinpad"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:enabled="false" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/enable_ttm"
        android:enabled="false"
        android:text="@string/enable_ttm"
        app:switchPadding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_to_pinpad"
        android:layout_centerHorizontal="true"/>



    <LinearLayout
        android:id="@+id/transaction_details_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enable_ttm"
        android:layout_centerHorizontal="true">

        <Spinner
            android:id="@+id/amount_dropdown"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:minWidth="100dp"
            android:maxWidth="200dp" />

        <Spinner
            android:id="@+id/transaction_command_dropdown"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:minWidth="100dp"
            android:maxWidth="200dp" />

        <Button
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="Go"
            android:id="@+id/submit_transaction_command"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction_command_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/transaction_details_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ref"
            android:enabled="false"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/user_reference"
            android:layout_weight="1"
            android:hint="@string/user_reference"
            android:selectAllOnFocus="true"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:enabled="false"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autogen_user_ref_checkbox"
            android:text="AutoRef"
            android:enabled="true"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/logger_view"
        android:layout_below="@+id/transaction_command_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scrollbars = "vertical"
        android:gravity="bottom"
        android:textAlignment="gravity" />
</RelativeLayout>
